fixed some star alignment

--- a/assets/stylesheets/pages/home.scss
+++ b/assets/stylesheets/pages/home.scss
@@ -232,7 +232,7 @@
 
 .home-work-drawing-2 {
   animation-duration: 20s;
-  bottom: -11vh;
+  bottom: -13vh;
   right: 2vh;
   width: 22vh;
 }
